Fixing Navbar behaviour v1.1

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,89 +1,64 @@
-<!-- 
-  CRITICAL FIX: Use 'isAuthenticated$ | async' to dynamically determine if the user 
-  is logged in. This observable updates immediately when AuthService.updateNavBar() is called 
-  (i.e., after login/logout).
--->
+<!-- The primary fix is to use a single <nav> element for styling stability -->
+<nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #000;">
+    <div class="container-fluid">
 
-<!-- Public Nav Bar (Displayed when NOT authenticated) -->
-<ng-container *ngIf="!(isAuthenticated$ | async)">
-  <nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #000;">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="home" style="color: #48e3cc;">GST Medicose</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScrollDefault"
-        aria-controls="navbarScrollDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScrollDefault">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/register" routerLinkActive="active-link" style="color: #48e3cc;">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/login" routerLinkActive="active-link" style="color: #48e3cc;">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</ng-container>
-  
-<!-- Authenticated Nav Bars (Displayed when isAuthenticated$ is true) -->
-<ng-container *ngIf="(isAuthenticated$ | async)">
+        <!-- BRAND LINK (changes based on authentication state) -->
+        <a class="navbar-brand" 
+           [routerLink]="(isAuthenticated$ | async) ? (isAdminLoggedIn ? 'admin/dashboard' : 'user/dashboard') : 'home'" 
+           style="color: #48e3cc;">
+            GST Medicose
+        </a>
 
-  <!-- User Nav Bar -->
-  <!-- Note: We use the synchronous getter 'isUserLoggedIn' here for role differentiation, 
-       but the overall visibility is controlled by the observable above. -->
-  <nav class="navbar navbar-expand-lg" data-bs-theme="dark" *ngIf="isUserLoggedIn" style="background-color: #000;">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="user/dashboard" style="color: #48e3cc;">GST Medicose</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScrollUser"
-        aria-controls="navbarScrollUser" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScrollUser">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/user/add-stock" routerLinkActive="active-link" style="color: #48e3cc;">Add Stock</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/user/create-bill" routerLinkActive="active-link" style="color: #48e3cc;">Create Bill</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/user/bills" routerLinkActive="active-link" style="color: #48e3cc;">Show Bills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/user/details" routerLinkActive="active-link" style="color: #48e3cc;">Details</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="logout()" style="color: #48e3cc;">Log out</a>
-          </li>
-        </ul>
-      </div>
-  </div>
-  </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <!-- Admin Nav Bar -->
-  <nav class="navbar navbar-expand-lg" data-bs-theme="dark" *ngIf="isAdminLoggedIn" style="background-color: #000;">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="admin/dashboard" style="color: #48e3cc;">GST Medicose</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScrollAdmin"
-        aria-controls="navbarScrollAdmin" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScrollAdmin">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/admin/add-product" routerLinkActive="active-link" style="color: #48e3cc;">Add Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="logout()" style="color: #48e3cc;">Log out</a>
-          </li>
-        </ul>
-      </div>
-  </div>
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
+            
+            <!-- Link Group 1: Logged Out (Public) Links -->
+            <ul class="navbar-nav ml-auto" *ngIf="!(isAuthenticated$ | async)">
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="/register" routerLinkActive="active-link" style="color: #48e3cc;">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="/login" routerLinkActive="active-link" style="color: #48e3cc;">Login</a>
+                </li>
+            </ul>
+
+            <!-- Link Group 2: Logged In (User/Admin) Links -->
+            <ul class="navbar-nav ml-auto" *ngIf="(isAuthenticated$ | async)">
+              
+              <!-- If Admin, show Admin Links -->
+              <ng-container *ngIf="isAdminLoggedIn">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/add-product" routerLinkActive="active-link" style="color: #48e3cc;">Add Product</a>
+                </li>
+              </ng-container>
+
+              <!-- If User (and not Admin), show User Links -->
+              <ng-container *ngIf="isUserLoggedIn && !isAdminLoggedIn">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/user/add-stock" routerLinkActive="active-link" style="color: #48e3cc;">Add Stock</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/user/create-bill" routerLinkActive="active-link" style="color: #48e3cc;">Create Bill</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/user/bills" routerLinkActive="active-link" style="color: #48e3cc;">Show Bills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/user/details" routerLinkActive="active-link" style="color: #48e3cc;">Details</a>
+                </li>
+              </ng-container>
+              
+              <!-- Logout button (shared) -->
+              <li class="nav-item">
+                  <a class="nav-link" (click)="logout()" style="color: #48e3cc;">Log out</a>
+              </li>
+            </ul>
+
+        </div>
+    </div>
 </nav>
-
-</ng-container>
