Added Profile Section to update profile details

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary" style="background-color: #48e3cc; color: #000;">Log in</button>
+            <button type="submit" class="btn btn-primary" style="background-color: #48e3cc; color: #000;" [disabled]="validateForm.invalid">Log in</button>
           </div>
         </form>
       </div>
